--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -30,7 +30,7 @@
 
           <td>{{ product.title }}</td>
           <td>{{ product.description }}</td>
-          <td>{{ product.category }}</td>
+          <td>{{ product.category.name }}</td>
           <td>{{ product.price | currency:'USD' }}</td> 
 
           <td>{{product.stock}}</td>
