--- a/client/src/app/layout/aside/aside.component.css
+++ b/client/src/app/layout/aside/aside.component.css
@@ -58,7 +58,7 @@ body {
   display: flex;
   align-items: center; 
   gap: 15px;
-  justify-content: flex-start; 
+  justify-content: space-between; 
 }
 
 .aside-nav ul li:hover {
