--- a/client/src/app/cart/cart-product/cart-product.component.html
+++ b/client/src/app/cart/cart-product/cart-product.component.html
@@ -12,8 +12,8 @@
         </div>
       </div>
     </div>
-    <div class="cp-remove">
-  <app-remove-cart-product *ngIf="product" [productId]="product!.id">
+    <div class="cp-remove" *ngIf="product">
+  <app-remove-cart-product [productId]="product!.id">
     <!-- Component for product removal of the cart -->
   </app-remove-cart-product>
 </div>
