--- a/client/src/app/cart/cart-product/cart-product.component.html
+++ b/client/src/app/cart/cart-product/cart-product.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="cp-remove" *ngIf="product">
-  <app-remove-cart-product [productId]="product!.id">
+  <app-remove-cart-product [productId]="product!.productId">
     <!-- Component for product removal of the cart -->
   </app-remove-cart-product>
 </div>
