--- a/client/src/app/cart/cart-ticket/cart-ticket.component.html
+++ b/client/src/app/cart/cart-ticket/cart-ticket.component.html
@@ -12,7 +12,7 @@
     <form [formGroup]="reductionForm">
       <input 
         type="text" 
-        formControlName="reductionCode" 
+        formControlName="discountCode" 
         placeholder="Have A Reduction Code?" 
       />
     </form>
