--- a/client/src/app/profile/profile-adress/profile-adress.component.css
+++ b/client/src/app/profile/profile-adress/profile-adress.component.css
@@ -1,7 +1,7 @@
 .editable-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  gap: 5px;
+  align-items: center;
   margin: 20px;
 }
 
