--- a/client/src/app/profile/profile-adress/profile-adress.component.html
+++ b/client/src/app/profile/profile-adress/profile-adress.component.html
@@ -12,5 +12,5 @@
   <button 
     *ngIf="isEditable" 
     class="save-button" 
-    (click)="saveAddress()">Save</button>
+    (click)="saveAddress()"><i class="fa fa-check"></i></button>
 </div>
