--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -7,7 +7,9 @@
     </app-profile-data>
     
     <div class="user-adress">
-      <app-profile-adress>
+      <app-profile-adress
+      [adress]="user.adress"
+      >
             
       </app-profile-adress>
     </div>
