--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="container">
- 
+  
   <div class="header">
      <app-header></app-header>
   </div>
@@ -8,6 +8,11 @@
   </div> 
 
   <div class="main">
+    <!-- Shows on small display -->
+    <div class="rs-wrn">
+      <app-responsive-warning> </app-responsive-warning>
+    </div>
+
     <router-outlet></router-outlet>
   </div>
 </div>
