--- a/client/src/app/layout/product-card/product-card.component.css
+++ b/client/src/app/layout/product-card/product-card.component.css
@@ -1,26 +1,30 @@
 .product-card {
-  padding: 15px;
-  height: 300px; 
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  height: 250px;
+  width: 220px; 
+  max-width: 100%; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   border-radius: 10px;
 }
 
 .product-image img {
-  width: 120px;
-  height: 150px;
+  width: 100%;
+  height: 120px;
   object-fit: cover;
 }
 
 .p-data-title {
   text-align: center;
-  font-size: 17px;
+  font-size: 15px;
   font-weight: bold;
 }
 
 .p-data-price {
   color: green;
+  font-size: 14px;
 }
 
 a {
