--- a/client/src/app/layout/product-list/product-list.component.css
+++ b/client/src/app/layout/product-list/product-list.component.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 15px;
+    grid-gap: 15px;
 }
 
 @media(max-width: 700px) {
