--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -8,7 +8,7 @@
     
     <div class="user-adress">
       <app-profile-adress
-      [adress]="user?.adress"
+      [address]="user?.adress"
       >
             
       </app-profile-adress>
