--- a/client/src/app/product-details/product-opinion/product-opinion.component.html
+++ b/client/src/app/product-details/product-opinion/product-opinion.component.html
@@ -1,10 +1,9 @@
 <div class="opinion"> 
     <div class="o-user">
-      <img src="/assets/images/istockphoto-579156228-1024x1024.jpg" alt="Screenshot_20240928-011835.png">
+        <img [src]="opinion?.user?.profilePicture ?? '/assets/images/istockphoto-579156228-1024x1024.jpg'" alt="Screenshot_20240928-011835.png">
       <p class="username">{{ opinion?.user?.username || 'Someone' }}</p>
     </div>
     <div class="o-data">
-      <p class="date">2024/07/13</p>
       <div class="b-verify ok">
         <i class="fa fa-check"></i>
         <p>Purchase Verified</p>
