--- a/client/src/app/product-details/add-to-cart-button/add-to-cart-button.component.html
+++ b/client/src/app/product-details/add-to-cart-button/add-to-cart-button.component.html
@@ -5,9 +5,9 @@
   {{ inCart ? 'Remove From Cart' : 'Add To Cart' }}
 </button>
 
-<div *ngIf="addProductForm.invalid && (addProductForm.dirty || addProductForm.touched)" class="val error">
+<div *ngIf="addProductForm.invalid && (addProductForm.dirty || addProductForm.touched)" class="val-error">
   <ul>
-    <li *ngIf="quantity.invalid && quantity.touched">Quantity is required.</li>
-    <li *ngIf="options.invalid && options.touched">You must select at least one option.</li>
+    <li *ngIf="addProductForm.controls['quantity'].invalid && addProductForm.controls['quantity'].touched">Quantity is required.</li>
+    <li *ngIf="addProductForm.controls['options'].invalid && addProductForm.controls['options'].touched">You must select at least one option.</li>
   </ul>
-</div> 
+</div>
