--- a/client/src/app/admin/admin-product-form/admin-product-form.component.html
+++ b/client/src/app/admin/admin-product-form/admin-product-form.component.html
@@ -36,7 +36,7 @@
         <div class="inp">
           <label for="Category">Category</label>
           <select formControlName="category">
-            <option [value]="1">Smartphones</option>
+            <option [value]="1" selected>Smartphones</option>
             <option [value]="2">PC</option>
             <option [value]="3">Consoles</option>
             <option [value]="4">Gaming</option>
