--- a/client/src/app/admin/admin-orders/admin-order/admin-order.component.css
+++ b/client/src/app/admin/admin-orders/admin-order/admin-order.component.css
@@ -148,3 +148,9 @@
 .order .order-actions .in-progress {
   background-color: #BFBFBF;
 }
+
+@media(max-width: 600px) {
+    .order-f {
+        flex-direction: column;
+    }
+}
