--- a/client/src/app/layout/aside/aside.component.css
+++ b/client/src/app/layout/aside/aside.component.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #f4f4f4;
@@ -70,10 +68,11 @@ body {
 .aside-nav ul li a {
   text-decoration: none;
   color: black;
-  display: flex; 
+  display: inline-flex; 
   align-items: center; 
-  justify-content: center;
-  width: 100%; 
+  justify-content: flex-start; 
+  gap: 10px; /* Espacio entre el icono y el texto */
+  width: auto; 
 }
 
 .flex-li {
@@ -88,11 +87,6 @@ body {
   list-style-type: none; 
   padding-left: 20px; 
 }
-
-/*.products-li.open .submenu {
-  display: flex; 
-  flex-direction: column; 
-} */
 
 .products-li .submenu.open {
   display: flex; 
