--- a/client/src/app/layout/admin-aside/admin-aside.component.css
+++ b/client/src/app/layout/admin-aside/admin-aside.component.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #f4f4f4;
@@ -60,10 +59,11 @@ body {
 .aside-nav ul li a {
   text-decoration: none;
   color: black;
-  display: flex; 
+  display: inline-flex;
   align-items: center; 
-  justify-content: center;
-  width: 100%; 
+  justify-content: flex-start;
+  gap: 10px;
+  width: auto;
 }
 
 .sidebar.collapsed .aside-nav ul li span {
