--- a/client/src/app/banned-page/banned-page.component.css
+++ b/client/src/app/banned-page/banned-page.component.css
@@ -1,3 +1,9 @@
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
     .container {
       max-width: 600px;
       padding: 20px;
