--- a/client/src/app/layout/aside/aside.component.html
+++ b/client/src/app/layout/aside/aside.component.html
@@ -46,31 +46,31 @@
         </div>
         <ul class="submenu" [class.open]="isSubmenuOpen">
           <li>
-            <a routerLink="/products/phones">
+            <a routerLink="/category/Smartphones">
               <i class="fa fa-mobile"></i>
               <span>Smartphones</span>
             </a>
           </li>
           <li>
-            <a routerLink="/products/pc">
+            <a routerLink="/category/PC">
               <i class="fa fa-laptop"></i>
               <span>PCs</span>
             </a>
           </li>
           <li>
-            <a routerLink="/products/consoles">
+            <a routerLink="/category/Consoles">
               <i class="fa fa-gamepad"></i>
               <span>Consoles</span>
             </a>
           </li>
           <li>
-            <a routerLink="/products/tv">
+            <a routerLink="/category/TV">
               <i class="fa fa-tv"></i>
               <span>TV</span>
             </a>
           </li>
           <li>
-            <a routerLink="/products/music">
+            <a routerLink="/category/Gaming">
               <i class="fa fa-headset"></i>
               <span>Music</span>
             </a>
