--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -15,18 +15,24 @@
     </div>
     
       <div class="u-data">
-        <div class="upfd-wishlist">
-          <i class="fa fa-heart"></i>
-          <p>My Wishlist</p>
-        </div>
-        <div class="upfd-orders">
-          <i class="fa fa-truck"></i>
-          <p>My Orders</p>
-        </div>
+        <a routerLink="/wishlist">
+          <div class="upfd-wishlist">
+            <i class="fa fa-heart"></i>
+            <p>My Wishlist</p>
+          </div>
+        </a>
+        <a routerLink="/orders">
+          <div class="upfd-orders">
+            <i class="fa fa-truck"></i>
+            <p>My Orders</p>
+          </div>
+        </a>
+       <a routerLink="/cart">
         <div class="upfd-cart">
           <i class="fa fa-shopping-cart"></i>
           <p>My Cart</p>
         </div>
+       </a>
       </div>
       </div>
 </main>
