--- a/client/src/app/cart/cart-product/cart-product.component.html
+++ b/client/src/app/cart/cart-product/cart-product.component.html
@@ -1,4 +1,4 @@
-<a [href]="'/product/' + product?.id">
+<a [href]="'/product/' + product?.productId">
   <div class="cart-product">
     <div class="cp-details">
       <div class="cp-image">
